--- a/app/globals.css
+++ b/app/globals.css
@@ -5,3 +5,24 @@
 ::-webkit-scrollbar{
   display: none;
 }
+
+.main-navigation {
+  position: relative;
+  overflow: hidden;
+}
+
+.main-navigation::after {
+  content: "";
+  height: 1px;
+  width: 100%;
+  background-color: black;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  transform: translateX(-100%);
+  transition: transform 375ms;
+}
+
+.main-navigation:hover::after {
+  transform: translateX(0%);
+}
